<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_space"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/default_space">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/no_space"
            android:contentDescription="@string/poster_view"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_loading" />

        <ImageView
            android:id="@+id/iv_dark_bg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_dark"
            android:contentDescription="@string/image_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:layout_marginBottom="@dimen/huge_space"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="@id/iv_poster"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            tools:text="@string/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>